:lipstick: Fix content text-align

--- a/src/content/Content.scss
+++ b/src/content/Content.scss
@@ -2,6 +2,8 @@
   padding: 50px 15px 15px 15px;
   line-height: 28px;
   height: 1000px;
+  font-size: 16.8px;
+  text-align: left;
   //position: absolute;
   //top: 50%;
   //left: 50%;
